<resources>
    <string name="app_name">My Smart Community App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register">"Register"</string>
    <string name="title_activity_sign_in">SignIn</string>
    <string name="name">"Name"</string>
    <string name="email">"Email"</string>
    <string name="phno">"Phone Num"</string>
    <string name="id">"ID"</string>
    <string name="address">"Address"</string>
    <string name="dob">"DOB"</string>
    <string name="dob_hint">"dd/mm/yy"</string>
    <string name="cancel">Cancel</string>
    <string name="password">Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="total_ideas">TOTAL IDEAS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
